--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@
   }
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
+:target { scroll-margin-top: 120px; }
+
 .theme-active {
   transform: scale(1.2);
 }
